--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
+* {
+    padding: 0;
+    margin: 0;
+    /*box-sixing es una propriedad que dice como se van a comportar las cajas de lo alto y de lo ancho*/
+    box-sizing: border-box;
+}
+
+html,
+body {
+    background-color: #1b1b32; 
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding-top: 15px;
+    font-family: Lato, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.freecodecamp-logo-contenedor {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.freecodecamp-logo {
+    height: 150px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*estilo para el contenedor principal que contiene botones y contador*/
+.contenedor-contador {
+    height: 550px;
+    min-width: 600px; /*para que se pueda estirar*/
+    display: flex;
+    flex-wrap: wrap; /*para que cada elemento se quede en su linea*/
+    flex-direction: column; /*para que se agrupe como una columna*/
+    align-items: center;
+    justify-content: center;
 }
